[Complete] api 호출 전 세팅 완료

--- a/Front/tsconfig.json
+++ b/Front/tsconfig.json
@@ -17,7 +17,7 @@
     /* Advanced Options */
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true, // import React from 'react' 사용가능 하게 해줌
   },
   "include": ["./src/**/*"]
 }
