--- a/Front/package.json
+++ b/Front/package.json
@@ -8,8 +8,22 @@
     "dependencies": {
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/styled-components": "^5.1.7",
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link": "^1.2.14",
+        "apollo-link-http": "^1.5.17",
+        "apollo-link-ws": "^1.0.20",
+        "apollo-utilities": "^1.3.4",
+        "graphql": "^15.4.0",
+        "graphql-tag": "^2.11.0",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-apollo": "^3.1.5",
+        "react-apollo-hooks": "^0.5.0",
+        "react-dom": "^17.0.1",
+        "styled-components": "^5.2.1",
+        "styled-reset": "^4.3.4",
+        "subscriptions-transport-ws": "^0.9.18"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "2.x",
@@ -23,6 +37,7 @@
         "eslint-plugin-jsx-a11y": "6.x",
         "eslint-plugin-react": "7.x",
         "eslint-plugin-react-hooks": "2.x",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.1",
         "ts-loader": "^8.0.14",
         "typescript": "^4.1.3",
